Added update params for stage 1 and stage 2 mosaics
